# NeuralPagedAttention

./: .gitattributes  .gitignore  AGENT_INSTRUCTIONS.md  README.md  app.py  blog.md  environment.py  inference.py  models.py  my_env_v4.py  openapi.yaml  openenv.yaml  pyproject.toml  requirements.txt  run_lru_test.py  run_qagent_test.py  test_peft.py  train_dqn.py  validate-submission.sh
agents/LLMAgent/: __init__.py  llm.py  prompts.py
agents/LRUAgent/: lru.py
agents/NeuralAgent/: dqn.py  dqn_weights.pth  dqn_weights_best.pth
agents/QLearningAgent/: QAgent.py
agents/RandomAgent/: run_random_agent.py
agents/UnslothPPOAgent/: ppo_agent.py  train_ppo.py  train_ppo_ddp.py
agents/UnslothPPOAgent/ppo_lora_agent/: README.md  adapter_config.json  adapters.safetensors  tokenizer.json
colab/: Colab_Marathon_Training.ipynb  marathon_train.py
hf_ppo_space/: Dockerfile  README.md  app.py  requirements.txt
hf_train_space/: Dockerfile  Dockerfile.unsloth  README.md  app.py  requirements.txt
results/: benchmarks.json
results/remote_runs/: llm_easy.json  llm_hard.json  llm_medium.json  ppo_easy.json  ppo_hard.json  ppo_medium.json
scripts/: fetch_remote_scores.py  run_benchmarks.py
server/: app.py  environment.py  requirements.txt  session_manager.py
server/env_components/: __init__.py  action_executor.py  constants.py  observation.py  penalties.py  request_factory.py  scoring.py  state.py  tick_engine.py  traffic.py
